<?xml version="1.0" encoding="utf-8"?>

<resources>
        <string name="about_app">\nThe Ultimate Voice Reminder App</string>
        <string name="no_pending_reminders">No Pending Reminders</string>
        <string name="alarm_activity">Prompt Schedule Alarm</string>
        <string name="slide_to_cancel">SLIDE TO CANCEL</string>
        <string name="app_name">Prompt Schedule</string>
        <string name="dummy_date">1970/01/01</string>
        <string name="time_elapsed">00:00:00</string>
        <string name="no_history">No History</string>
        <string name="set_date">SET DATE</string>
        <string name="set_time">SET TIME</string>
        <string name="save">Save Reminder</string>
        <string name="dummy_time">00:00</string>
        <string name="settings">Settings</string>
        <string name="pending">Pending</string>
        <string name="dismiss">Dismiss</string>
        <string name="history">History</string>
        <string name="about">About</string>

</resources>