<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:auto="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back"
        android:gravity="center_horizontal"
        android:paddingBottom="40dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="40dp"
        tools:context="HomeActivity">

        <LinearLayout
                android:id="@+id/homeButtonsWrapper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.design.widget.FloatingActionButton
                        android:id="@+id/pendingButton"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_margin="20dp"
                        android:onClick="goToPending"
                        android:src="@drawable/pending_icon"
                        auto:backgroundTint="#B1B3B6"
                        auto:elevation="10dp"
                        auto:fabSize="normal"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/pending"
                        android:textAllCaps="true"
                        android:textColor="@color/text"
                        android:textSize="14sp"/>

                <android.support.design.widget.FloatingActionButton
                        android:id="@+id/historyButton"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="20dp"
                        android:onClick="goToHistory"
                        android:src="@drawable/history_icon"
                        auto:backgroundTint="#B1B3B6"
                        auto:elevation="10dp"
                        auto:fabSize="normal"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/history"
                        android:textAllCaps="true"
                        android:textColor="@color/text"
                        android:textSize="14sp"/>

        </LinearLayout>

        <TextView
                android:id="@+id/timerBoard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/holdingButtonLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:text="@string/time_elapsed"
                android:textColor="@color/text"
                android:textSize="16sp"
                android:visibility="invisible"/>

        <com.dewarder.holdinglibrary.HoldingButtonLayout
                android:id="@+id/holdingButtonLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                auto:hbl_cancel_color="@color/accent"
                auto:hbl_cancel_icon="@drawable/close_icon"
                auto:hbl_color="@color/primaryDark"
                auto:hbl_holding_view="@+id/recordButton"
                auto:hbl_icon="@drawable/mic_icon"
                auto:hbl_radius="50dp"
                auto:hbl_second_radius="5dp">

                <LinearLayout
                        android:id="@+id/slideToCancelLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        android:layout_marginEnd="120dp"
                        android:gravity="center_vertical"
                        android:visibility="invisible">

                        <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="10dp"
                                android:contentDescription="@string/slide_to_cancel"
                                android:scaleType="center"
                                android:src="@drawable/left_icon"/>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/slide_to_cancel"
                                android:textColor="@color/text"/>

                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|bottom"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <View
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:layout_weight="1"/>

                        <android.support.design.widget.FloatingActionButton
                                android:id="@+id/recordButton"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_gravity="end"
                                android:layout_marginBottom="5dp"
                                android:layout_marginEnd="5dp"
                                android:src="@drawable/mic_icon"
                                auto:backgroundTint="@color/grey"
                                auto:elevation="5dp"
                                auto:fabSize="normal"/>

                </LinearLayout>

        </com.dewarder.holdinglibrary.HoldingButtonLayout>

</RelativeLayout>